# life360-remote

./: .gitignore  README.md  env.example  main.py  pyproject.toml
Life720/: .gitignore
Life720/Life720/: Config.example.plist  ConfigLoader.swift  Life360Client.swift  Life720App.swift  Logger.swift  Models.swift  ViewComponents.swift  WebSocketManager.swift
Life720/Life720.xcodeproj/: project.pbxproj
Life720/Life720.xcodeproj/xcshareddata/xcschemes/: Life720.xcscheme
src/: __init__.py  api.py  cli.py  life360_service.py  models.py  websocket_handler.py
